--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,9 @@
 
 
 body{
-background-color: var(--primary-background);
 color:var(--primary-font-color);
+background-color: var(--primary-background);
+font-family: Roboto, sans-serif;
 }
 
 .list{
@@ -20,12 +21,21 @@ color:var(--primary-font-color);
 }
 
 /* Site nav */
+.header-block{
+background-color: var(--primary-background);
+}
+
 .web-logo{
     color: var(--accent-color);  
 }
 
 .logo-link{
     color: var(--logo-color);
+    font-family: Raleway;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
     text-decoration: none;
 }
 
@@ -36,6 +46,10 @@ color:var(--primary-font-color);
 
 .site-nav .link {
     color: var(--primary-font-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
     text-decoration: none;
 }
 
@@ -45,6 +59,10 @@ color: var(--accent-color);
 
 .contact-nav .link {
     color: var(--secondary-font-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
     text-decoration: none;
 }
 
@@ -62,37 +80,92 @@ color: var(--accent-color);
 .main{
     background-color: var(--secondary-background);
 }
+
 .main-title {
-    color: var(--primary-background)
+    color: var(--primary-background);
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
 }
+
 .main-button{
     color: var(--primary-background);
     background-color: var(--accent-color);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
     cursor: pointer;
     border: none;
 }
+
 .main-button:hover,
 .main-button:focus{
 color: var(--primary-font-color);
 }
 
 /* Activity section */
+
+
+.activity-title{
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+}
+
 .avtivity-content{
-    color:var(--secondary-font-color)
+    color:var(--secondary-font-color);
+    font-size: 14px;
+    line-height: 1.72;
+    letter-spacing: 0.03em;
 }
 /* Work section */
+.work-title,
+.team-prime{
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+}
 
 
 /* Team section */
+.team-section{
+background-color: var(--button-current);
+}
+
+.team-title{
+font-weight: 500;
+font-size: 16px;
+line-height: 1.19;
+letter-spacing: 0.03em;
+}
+
 .team-content{
 color: var(--secondary-font-color);
+font-size: 16px;
+line-height: 1.19;
+letter-spacing: 0.03em;
 }
+
 /* Footer */
 .footer-block{
     background-color: var(--secondary-background);
 }
 .logo-footer{
     color: var(--primary-background);
+    font-family: Raleway;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
     text-decoration: none;
 }
 .logo-footer:hover,
@@ -102,9 +175,17 @@ color: var(--accent-color);
 
 .adress-footer {
     color: var(--primary-background);
+    font-style: normal;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
 }
 .contact-footer .link{
     color: var(--contact-footer) ;
+    font-style: normal;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
     text-decoration: none;
 }
 .contact-footer .link:hover,
@@ -125,6 +206,17 @@ color: var(--accent-color);
     color: var(--primary-background);
 }
 /* Examples */
+
+.examples-title{
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+}
+
 .examples-item{
     color: var(--secondary-font-color);
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.03em;
 }
